add real firestore integration tests